--- a/chat.html
+++ b/chat.html
@@ -3,10 +3,96 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Chat with ProjectByAI</title>
+<title>ProjectByAI Chatbot</title>
 <style>
-  /* ... your existing styles ... */
-  /* Add these new styles for code block & buttons */
+  body {
+    background: #121212;
+    color: #00ffe7;
+    font-family: 'Orbitron', sans-serif;
+    margin: 0; padding: 0;
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
+  }
+  header {
+    text-align: center;
+    padding: 15px;
+    font-size: 1.5rem;
+    background: #0a0a0a;
+    box-shadow: 0 2px 8px #00ffe7;
+  }
+  #chat {
+    flex: 1;
+    overflow-y: auto;
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+  }
+  .message {
+    max-width: 75%;
+    padding: 12px 18px;
+    border-radius: 20px;
+    font-size: 1rem;
+    line-height: 1.3;
+    white-space: pre-wrap;
+  }
+  .bot {
+    align-self: flex-start;
+    background-color: #003333;
+    color: #0f0;
+    display: flex;
+    align-items: flex-start;
+    gap: 10px;
+  }
+  .bot-avatar {
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    flex-shrink: 0;
+    margin-top: 3px;
+  }
+  .bot .text {
+    background: #004d4d;
+    border-radius: 20px;
+    padding: 12px 18px;
+    max-width: 100%;
+  }
+  .user {
+    align-self: flex-end;
+    background-color: #eee;
+    color: #111;
+    border-radius: 20px 20px 0 20px;
+  }
+  footer {
+    display: flex;
+    padding: 10px 20px;
+    background: #0a0a0a;
+    box-shadow: 0 -2px 8px #00ffe7;
+    gap: 10px;
+  }
+  footer input {
+    flex: 1;
+    padding: 10px 15px;
+    border-radius: 30px;
+    border: none;
+    font-size: 1rem;
+    outline: none;
+  }
+  footer button {
+    background: #00ffe7;
+    border: none;
+    border-radius: 30px;
+    padding: 10px 18px;
+    font-weight: bold;
+    color: #000;
+    cursor: pointer;
+    transition: background-color 0.3s;
+  }
+  footer button:hover {
+    background-color: #00bfa6;
+  }
+  /* Code block styles */
   .code-block {
     background: #222;
     color: #0f0;
@@ -15,14 +101,13 @@
     white-space: pre-wrap;
     font-family: 'Courier New', Courier, monospace;
     max-width: 80vw;
-    margin: 10px 0;
     box-shadow: 0 0 10px #0f0;
-    position: relative;
+    margin-top: 10px;
   }
   .code-buttons {
     display: flex;
     gap: 10px;
-    margin-bottom: 20px;
+    margin: 8px 0 0 50px; /* offset so aligned with text, considering avatar width */
   }
   .code-btn {
     background: #00ffe7;
@@ -40,19 +125,64 @@
 </style>
 </head>
 <body>
-<header>🤖 ProjectByAI - Chat Mode</header>
-<div class="chat-container" id="chat"></div>
+
+<header>🤖 ProjectByAI Chat Mode</header>
+
+<div id="chat"></div>
+
 <footer>
-  <input type="text" id="user-input" placeholder="Type something..." autocomplete="off" />
-  <button class="send-btn" onclick="sendMessage()">Send</button>
-  <button class="clear-btn" onclick="clearMemory()">Clear Memory</button>
+  <input id="user-input" type="text" placeholder="Type something..." autocomplete="off" />
+  <button id="send-btn">Send</button>
+  <button id="clear-btn">Clear Memory</button>
 </footer>
+
 <script>
   const chat = document.getElementById('chat');
   const input = document.getElementById('user-input');
-  let userName = localStorage.getItem("userName") || "friend";
-  let isDarkTheme = true;
+  const sendBtn = document.getElementById('send-btn');
+  const clearBtn = document.getElementById('clear-btn');
 
+  // Get user name from localStorage (set on homepage)
+  let userName = localStorage.getItem("userName") || "Friend";
+
+  // Jokes pool (20 jokes no repeats)
+  const jokes = [
+    "Why don’t scientists trust atoms? Because they make up everything!",
+    "Why did the math book look sad? Because it had too many problems.",
+    "Why was the computer cold? Because it left its Windows open!",
+    "Why don’t programmers like nature? It has too many bugs.",
+    "Why do Java developers wear glasses? Because they don’t see sharp.",
+    "How does a penguin build its house? Igloos it together.",
+    "Why did the scarecrow win an award? Because he was outstanding in his field.",
+    "Why can’t your nose be 12 inches long? Because then it would be a foot.",
+    "What do you call fake spaghetti? An impasta!",
+    "Why did the bicycle fall over? Because it was two-tired!",
+    "Why don’t skeletons fight each other? They don’t have the guts.",
+    "Why did the cookie go to the hospital? Because he felt crummy.",
+    "Why did the chicken join a band? Because it had the drumsticks!",
+    "Why was the math lecture so long? The professor kept going off on a tangent.",
+    "Why did the coffee file a police report? It got mugged.",
+    "What do you call cheese that isn't yours? Nacho cheese.",
+    "Why was the belt arrested? For holding up a pair of pants.",
+    "Why did the golfer bring two pairs of pants? In case he got a hole in one.",
+    "What did the grape say when it got stepped on? Nothing, it just let out a little wine.",
+    "Why do cows wear bells? Because their horns don’t work."
+  ];
+
+  // Track used jokes so no repeats until all used
+  let usedJokes = new Set();
+
+  // Leaderboard placeholder
+  let leaderboard = {
+    jokesTold: 0,
+    quizzesPassed: 0,
+    chatsHad: 0
+  };
+
+  // Easter egg trigger char
+  const easterEggTrigger = "!";
+
+  // HTML script snippet for "html script" request
   const htmlScriptCode = `<!DOCTYPE html>
 <html lang="en">
 <head>
@@ -70,37 +200,87 @@
 </body>
 </html>`;
 
+  // Utility: get next unused joke
+  function getJoke() {
+    if (usedJokes.size === jokes.length) usedJokes.clear();
+    let joke;
+    do {
+      joke = jokes[Math.floor(Math.random() * jokes.length)];
+    } while (usedJokes.has(joke));
+    usedJokes.add(joke);
+    leaderboard.jokesTold++;
+    return joke;
+  }
+
+  // Bot reply logic
   function getBotReply(msg) {
     msg = msg.toLowerCase();
+
+    // Easter egg
+    if (msg.includes(easterEggTrigger)) {
+      return "🎉 You found the secret easter egg! Keep exploring 🔐";
+    }
+
     if (msg.includes("html script")) {
       return { type: "code", content: htmlScriptCode };
     }
+
     if (msg.includes("hello")) {
       return `Hey ${userName}! I’m your AI-powered pal. How can I assist you today?`;
     }
+
     if (msg.includes("make me laugh") || msg.includes("joke")) {
-      return "Why don’t scientists trust atoms? Because they make up everything!";
+      return getJoke();
     }
+
+    if (msg.includes("who made you") || msg.includes("who created you")) {
+      return "I was made by AI — A for Aman, I for Intelligence and ChatGPT!";
+    }
+
+    if (msg.includes("quiz")) {
+      return "Quiz coming soon! Stay tuned 🔥";
+    }
+
+    if (msg.includes("leaderboard")) {
+      return `🏆 Leaderboard:\nJokes told: ${leaderboard.jokesTold}\nQuizzes passed: ${leaderboard.quizzesPassed}\nChats had: ${leaderboard.chatsHad}`;
+    }
+
+    if (msg.includes("what is the capital of india")) {
+      return "New Delhi is the capital of India.";
+    }
+
+    if (msg.includes("cpu")) {
+      return "CPU stands for Central Processing Unit — the brain of your computer!";
+    }
+
+    if (msg.includes("which language is used for web apps")) {
+      return "JavaScript is the programming language used to build interactive web apps!";
+    }
+
+    // Default
     return "Classic question. Classic answer. Try asking something fun like 'make me laugh' or 'start quiz'!";
   }
 
+  // Append message to chat, with WhatsApp style bubbles and bot avatar
   function appendMessage(sender, data, type) {
     const messageDiv = document.createElement("div");
     messageDiv.classList.add("message", type);
 
     if (type === "bot") {
+      // Bot avatar + message box
       const avatar = document.createElement("img");
       avatar.src = "https://api.dicebear.com/7.x/bottts/svg?seed=AmanAI12";
       avatar.alt = "Bot Avatar";
       avatar.className = "bot-avatar";
-      if (!isDarkTheme) avatar.classList.add("light");
-      messageDiv.appendChild(avatar);
+
+      const textBox = document.createElement("div");
+      textBox.className = "text";
 
       if (typeof data === "object" && data.type === "code") {
+        // Show code block + buttons
         const codeBlock = document.createElement("pre");
         codeBlock.className = "code-block";
         codeBlock.textContent = data.content;
-        messageDiv.appendChild(codeBlock);
 
         const btnContainer = document.createElement("div");
         btnContainer.className = "code-buttons";
@@ -114,7 +294,6 @@
             setTimeout(() => (copyBtn.textContent = "Copy"), 1500);
           });
         };
-        btnContainer.appendChild(copyBtn);
 
         const testBtn = document.createElement("button");
         testBtn.className = "code-btn";
@@ -124,16 +303,22 @@
           newWindow.document.write(data.content);
           newWindow.document.close();
         };
+
+        btnContainer.appendChild(copyBtn);
         btnContainer.appendChild(testBtn);
 
-        messageDiv.appendChild(btnContainer);
+        textBox.appendChild(codeBlock);
+        textBox.appendChild(btnContainer);
       } else {
-        const textSpan = document.createElement("pre");
-        textSpan.innerHTML = data;
-        messageDiv.appendChild(textSpan);
+        // Normal text reply
+        textBox.textContent = data;
       }
+
+      messageDiv.appendChild(avatar);
+      messageDiv.appendChild(textBox);
     } else {
-      messageDiv.innerHTML = `<pre><strong>${sender}:</strong> ${data}</pre>`;
+      // User message right side
+      messageDiv.textContent = data;
     }
 
     chat.appendChild(messageDiv);
@@ -143,29 +328,4 @@
   function sendMessage() {
     const msg = input.value.trim();
     if (!msg) return;
-
-    appendMessage(userName, msg, "user");
-    input.value = "";
-
-    setTimeout(() => {
-      const reply = getBotReply(msg);
-      appendMessage("Bot", reply, "bot");
-      chat.scrollTop = chat.scrollHeight;
-    }, 400);
-  }
-
-  function clearMemory() {
-    if (confirm("Are you sure you want to clear all memory?")) {
-      localStorage.clear();
-      location.reload();
-    }
-  }
-
-  input.addEventListener("keypress", e => {
-    if (e.key === "Enter") sendMessage();
-  });
-
-  appendMessage("Bot", `Welcome back ${userName}! Type 'html script' to see a cool demo with copy & test buttons!`, "bot");
-</script>
-</body>
-</html>
+    appendMessage
